--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div id="slide1" class="carousel-item relative w-full">
           <div
-            class="hero min-h-[calc(90vh-100px)] bg-hero-banner1 my-14 rounded-lg"
+            class="hero min-h-[calc(90vh-100px)] bg-hero-banner1 mt-14 rounded-lg"
           >
             <div class="hero-overlay rounded-lg bg-opacity-40"></div>
             <div class="text-center text-white">
@@ -233,10 +233,30 @@
         <!-- slide-4 end-->
       </div>
       <!-- fruits item section -->
-      <div>
-        <div>
-          <img src="" alt="" />
-          <p></p>
+      <div class="relative">
+        <div
+          class="absolute -top-[120px] left-24 hidden lg:grid lg:grid-cols-5 text-gray-700 bg-white min-w-[1100px] px-14 py-9"
+        >
+          <div class="flex flex-col items-center justify-center">
+            <img src="./images/fruit1.png" alt="" />
+            <p class="text-gray-800 font-medium">Grapes</p>
+          </div>
+          <div class="flex flex-col items-center justify-center">
+            <img src="./images/fruit1.png" alt="" />
+            <p class="text-center text-gray-800 font-medium">Grapes</p>
+          </div>
+          <div class="flex flex-col items-center justify-center">
+            <img src="./images/fruit1.png" alt="" />
+            <p class="text-center text-gray-800 font-medium">Grapes</p>
+          </div>
+          <div class="flex flex-col items-center justify-center">
+            <img src="./images/fruit1.png" alt="" />
+            <p class="text-center text-gray-800 font-medium">Grapes</p>
+          </div>
+          <div class="flex flex-col items-center justify-center">
+            <img src="./images/fruit1.png" alt="" />
+            <p class="text-center text-gray-800 font-medium">Grapes</p>
+          </div>
         </div>
       </div>
     </header>
