--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
           <!-- member-1 end -->
           <!-- member-1 -->
           <div class="flex justify-center items-center flex-col mb-4">
-            <img class="mb-2 lg:mb-4" src="./images/member1.png" alt="" />
+            <img class="mb-2 lg:mb-4" src="./images/member2.png" alt="" />
             <h3 class="text-white">Awlad Hossain</h3>
             <p class="text-white">Fruits Expert</p>
             <p class="text-[#F85559]">
@@ -424,7 +424,7 @@
           <!-- member-1 end -->
           <!-- member-1 -->
           <div class="flex justify-center items-center flex-col mb-4">
-            <img class="mb-2 lg:mb-4" src="./images/member1.png" alt="" />
+            <img class="mb-2 lg:mb-4" src="./images/member3.png" alt="" />
             <h3 class="text-white">Awlad Hossain</h3>
             <p class="text-white">Fruits Expert</p>
             <p class="text-[#F85559]">
@@ -436,7 +436,7 @@
           <!-- member-1 end -->
           <!-- member-1 -->
           <div class="flex justify-center items-center flex-col mb-4">
-            <img class="mb-2 lg:mb-4" src="./images/member1.png" alt="" />
+            <img class="mb-2 lg:mb-4" src="./images/member4.png" alt="" />
             <h3 class="text-white">Awlad Hossain</h3>
             <p class="text-white">Fruits Expert</p>
             <p class="text-[#F85559]">
@@ -519,7 +519,7 @@
           </div>
 
           <!-- image -->
-          <div class="order-1 lg:order-2">
+          <div class="order-1 lg:order-2 mx-auto">
             <img src="./images/whychoose1.png" alt="" />
           </div>
           <!-- right-col -->
@@ -588,24 +588,27 @@
       </section>
       <!-- choose us section -->
     </main>
+    <!-- footer section -->
     <footer>
-      <div>
+      <div class="bg-[#121212] text-white py-32 px-3 lg:px-40 mt-32">
         <div>
-          <div>
+          <div class="flex items-center justify-center">
             <img src="./images/logo.png" alt="" />
-            <h3>Fruit Burst</h3>
+            <h3 class="text-5xl font-bold">Fruit Burst</h3>
           </div>
           <div>
-            <ul>
-              <li>home</li>
-              <li>about us</li>
-              <li>shop</li>
-              <li>all fruits</li>
-              <li>support</li>
-              <li>my account</li>
+            <ul
+              class="list-none flex justify-center items-center flex-wrap lg:flex-nowrap gap-0"
+            >
+              <li class="mr-10 my-12 font-semibold text-xl">home</li>
+              <li class="mr-10 my-12 font-semibold text-xl">about us</li>
+              <li class="mr-10 my-12 font-semibold text-xl">shop</li>
+              <li class="mr-10 my-12 font-semibold text-xl">all fruits</li>
+              <li class="mr-10 my-12 font-semibold text-xl">support</li>
+              <li class="mr-10 my-12 font-semibold text-xl">my account</li>
             </ul>
           </div>
-          <div>
+          <div class="flex justify-center items-center gap-10 text-4xl">
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-youtube"></i>
